# CIMCompiler

./: .gitignore  .gitmodules  CIM.g  CMakeLists.txt  Dockerfile  README.md  as_config.json  build.sh  compile.sh  gather_llm_code.py  out.json  readme.md  run.sh  run1.sh  run_llm.sh  run_model.sh  run_model_alexnet.sh  run_model_resnet.sh  run_model_vggnet.sh  setup.py  test.sh
.learn/: bit_sparse_conv2d_long_redu.py  bit_sparse_simulator.py  learn_jinja.py  template.jinja  weight_transform.py
antlr/: AntlrToJson.java
antlr_to_json/: Examples.java
cim_compiler/cli/: common.py  main.py
cim_compiler/csrc/: CMakeLists.txt  Combine.cpp  Dialect.cpp  Parser.cpp  main.cpp
cim_compiler/csrc/codegen/: CIMFlowInstructionWriter.cpp  CodeGenPass.cpp  InstructionWriter.cpp
cim_compiler/csrc/include/cim/: Ops.td  Parser.h  Passes.h
cim_compiler/csrc/include/cimisa/: Ops.td
cim_compiler/csrc/include/codegen/: InstructionWriter.h
cim_compiler/csrc/passes/: CIMBranchConvertPass.cpp  CIMLoweringPass.cpp  ConstantExpandPass.cpp  ExtractAddressComputationPass.cpp  FoldMemRefAliasPass.cpp  LoopUnrollPass.cpp  MemoryAddressAllocationPass.cpp  RR2RIPass.cpp  TransOffsetOptimizePass.cpp
cim_compiler/data_processor/: dense.py
cim_compiler/engine/: model_runner.py  operator_cim.py  operator_template.py
cim_compiler/op/: helper.py
cim_compiler/precompile/: __init__.py  macro_replace.py  remove_comment.py
cim_compiler/simulator/: data_type.py  flat_inst_util.py  macro_utils.py  mask_utils.py  meta_utils.py  reduce_util.py  reduce_utils.py  simd_utils.py  simulator.py  special_regs.py  stats_util.py
cim_compiler/utils/: bit_sparse_weight_transform.py  bit_value_sparse_weight_transform.py  check_dataflow_output.py  check_value_sparse_weight.py  combine_inst.py  json_converter.py  json_utils.py  max_output_memory_use.py  stats_outchannel_less_128.py  stats_whole_model.py
cli/: arguments.py  cim_compiler.py
cli/commands/: __init__.py  compile.py  convert.py  simulate.py
config/: config.json  config_template.json  config_template_skew.json  make_config.py
data_processor/: dense.py
docs/: cim_dialect.md  cim_dsl.md  issue.md
engine/: model_runner.py  operator_cim.py  operator_template.py
exp/llm_cim/: 6B7_1k.sh  main.py
include/: CMakeLists.txt
include/cim/: CMakeLists.txt  Dialect.h  (+3 more)
main/: CIMISADialect.cpp  CMakeLists.txt  Combine.cpp  Dialect.cpp  MemoryAddressAllocationPass.cpp  Parser.cpp  main.cpp
main/codegen/: CIMFlowInstructionWriter.cpp  CodeGenPass.cpp  InstructionWriter.cpp
main/pass/: CIMBranchConvertPass.cpp  CIMLoweringPass.cpp  CastEliminationPass.cpp  CodeGenPass.cpp  CommonSubexpressionExposePass.cpp  DecomposeAffineOpPass.cpp  ExtractAddressComputationPass.cpp  FoldMemRefAliasPass.cpp  LoopUnrollPass.cpp  MemoryAddressAllocationPass.cpp  RR2RIPass.cpp  ShapeInferencePass.cpp
op/: helper.py  op_factory.py
precompile/: __init__.py  macro_replace.py  remove_comment.py
scripts/: run_model.sh  run_model_alexnet.sh  run_model_efficientnet.sh  run_model_mobilenet.sh  run_model_resnet.sh  run_model_vggnet.sh
simulator/: data_type.py  flat_inst_util.py  macro_utils.py  mask_utils.py  meta_utils.py  simulator.py  stats_util.py
test/: base.py
utils/: bias_scale_fuse.py  bit_sparse_weight_transform.py  bit_value_sparse_weight_transform.py  change_name.py  check_dataflow_output.py  check_pooling.py  check_resadd_quantize.py  check_resmul_quantize.py  check_value_sparse_weight.py  clean_code.py  logger.py  max_input_memory_use.py  max_output_memory_use.py  predict_pimcompute_count.py  round.py  stats_outchannel_less_128.py  stats_whole_model.py
(+387 files in other folders)
